test/operations/test_concat_graph.expected
Retrieving commandline, environment, or config file variable ocannl_log_level
Found 0, in the config file
=== Concatenation Forward and Backprop Graph Test ===

--- Input tensors ---
x1 = [1.0, 2.0, 3.0] (dim 3)
x2 = [4.0, 5.0] (dim 2)

--- Forward pass: sin((x1, x2) ++^ "a; b => a^b") ---
Concatenated result (after sin):
HERE: test/operations/test_concat_graph.ml:42:21
┌──────────────────────────────────────────────────┐
│[6]: sin_result shape 0:5                         │
│┌┬───────────────────────────────────────────────┐│
│││axis 0                                         ││
│├┼───────────────────────────────────────────────┤│
│││ 8.41e-1  9.09e-1  1.41e-1  -7.56e-1  -9.58e-1 ││
│└┴───────────────────────────────────────────────┘│
└──────────────────────────────────────────────────┘

--- Backward pass: gradients ---
Loss (sum of all sin values):
HERE: test/operations/test_concat_graph.ml:46:21
┌───────────────────────┐
│[9]: =>_loss shape 0:1 │
│┌┬─────────┐           │
│││axis 0   │           │
│├┼─────────┤           │
│││ 1.76e-1 │           │
│└┴─────────┘           │
└───────────────────────┘

Gradient of x1 (cos of original values):
HERE: test/operations/test_concat_graph.ml:49:21
┌─────────────────────┐
│[0]: 1,2,3 shape 0:3 │
│┌┬──────────────────┐│
│││axis 0            ││
│├┼──────────────────┤│
│││ 1.00  2.00  3.00 ││
│└┴──────────────────┘│
└─────────────────────┘
┌────────────────────────────────┐
│[0]: 1,2,3 shape 0:3  grad_1,2,3│
│┌┬─────────────────────────────┐│
│││axis 0                       ││
│├┼─────────────────────────────┤│
│││ 5.40e-1  -4.16e-1  -9.89e-1 ││
│└┴─────────────────────────────┘│
└────────────────────────────────┘

Gradient of x2:
HERE: test/operations/test_concat_graph.ml:52:21
┌───────────────────┐
│[2]: 4,5 shape 0:2 │
│┌┬────────────┐    │
│││axis 0      │    │
│├┼────────────┤    │
│││ 4.00  5.00 │    │
│└┴────────────┘    │
└───────────────────┘
┌────────────────────────────┐
│[2]: 4,5 shape 0:2  grad_4,5│
│┌┬───────────────────┐      │
│││axis 0             │      │
│├┼───────────────────┤      │
│││ -6.53e-1  2.83e-1 │      │
│└┴───────────────────┘      │
└────────────────────────────┘

=== Concatenation Graph Test Complete ===

=== Three-way Concatenation Test (Known Limitation) ===

ERROR: ("Utils.User_error(\"Ambiguous indices in concatenation: multiple blocks viable for same position\")")

=== Three-way Concatenation Test Complete ===
